set01/problem10_compile_errors.txt
c:\Users\komal\OneDrive\Desktop\fpc-advanced-classroom-1st-year-assignment-Komal8020\set01\problem10.c: In function 'stringcompare':
c:\Users\komal\OneDrive\Desktop\fpc-advanced-classroom-1st-year-assignment-Komal8020\set01\problem10.c:16:6: error: expected expression before '}' token
      }
      ^
